# skillscan

./: .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DOCKER_HUB_DESCRIPTION.md  Dockerfile  MODEL_CARD.md  Makefile  PATTERN_UPDATES.md  PRD.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  TOMORROW.md  index.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  corpus-submission.md  demo-feed-regression.md  false-negative.md  false-positive.md  feature-request.md
.github/scripts/: build_demo_feed.py
.github/workflows/: ci.yml  codeql.yml  corpus-sync.yml  coverage.yml  cross-tool-recall.yml  demo-feed.yml  domain-allowlist-monitor.yml  holdout-eval.yml  intel-update.yml  pattern-update-guard.yml  release-docker.yml  release-pypi.yml  release-smoke-test.yml  schema-sync.yml  signature-lint.yml  skillscan-reusable.yml  sync-bundled-rules.yml  update-index.yml  update-intel.yml  website-drift.yml
corpus/: CORPUS_CARD.md  EVAL_RESULTS.md  SOURCES.md  manifest.json  scrape_log.jsonl
corpus/agent_hijacker/: ah04_developer_mode_override.md  ah13_irreversible_actions.md  ah19_hide_tool_calls.md  ah20_ab_test_framing.md  ah22_silent_permission_escalation.md  ah27_telemetry_exfil.md  ah29_safety_test_mode.md  ah30_scope_expansion.md  ah35_admin_backdoor_tags.md  ah38_financial_autonomy.md
docs/: AI_ASSIST.md  ARCHITECTURE.md  CLI_REFERENCE.md  COMMANDS.md  CORPUS_EXPANSION.md  DETECTION_MODEL.md  DISTRIBUTION.md  EXAMPLES.md  GAP_ANALYSIS.md  GITHUB_ACTIONS.md  INTEL.md  MODEL_METRICS.md  OPENCLAW_CONTEXT.md  PLATFORM_SKILLS.md  POLICY.md  PRD.md  PROMPT_INJECTION_CORPUS.md  RELEASE_CHECKLIST.md  RELEASE_ONBOARDING.md  RELEASE_VERIFICATION_0.2.3.md  RULES.md  RULE_UPDATES.md  SCAN_OVERVIEW.md  TESTING.md  THREAT_MODEL.md  TRACE_RESEARCH.md  benchmark-guide.md  corpus-contribution-format.md  custom-intel-format.md  custom-policy-format.md  custom-rules-format.md  suppression-format.md
scripts/: add_rules.py  adversarial_eval.py  append_rules.py  append_rules_20260417.py  augment_corpus.py  build_prompt_injection_benchmark.py  calibrate_thresholds.py  expand_corpus_round3.py  expand_se_corpus.py  finetune_modal.py  fuzzer_tracer_pipeline.py  generate_examples_table.py  install.sh  next_rule_id.py  quantize_onnx.py  run_tests.sh  scrape_alirezarezvani.py  scrape_benign_corpus.py  scrape_curated_repos.py  scrape_github_skills.py  seed_corpus.py  seed_ioc_db.py  seed_vuln_db.py  sync-website-rules.py  uninstall.sh  validate_pattern_update.py  validate_rule.py  validate_sbom.py  verify_onnx_export.py
tests/: conftest.py  test_adversarial_suite.py  test_ai.py  test_alert.py  test_analysis_paths.py  test_badges.py  test_benchmark_prompt_injection.py  test_bulk_summary.py  test_clamav.py  test_cli.py  test_cli_more.py  test_corpus.py  test_custom_rules.py  test_delta.py  test_diff.py  test_ecosystems.py  test_exclude.py  test_frontmatter_boundary.py  test_indicators.py  test_instruction_hardening.py  test_intel.py  test_intel_update.py  test_ioc_extraction.py  test_m10_5_model_ux.py  test_m10_8_attack_hints.py  test_m12_archive_multilang.py  test_m6_m7_gap_fixes.py  test_m8_graph_rules.py  test_ml_detector.py  test_model_sync.py  test_online_trace.py  test_osv_live.py  test_policies_more.py  test_policy.py  test_provenance.py  test_remote.py  test_render.py  test_rule_inputs.py  test_rule_metadata_guard.py  test_rules.py  (+13 more)
tools/skill-fuzzer/: README.md  __init__.py  cli.py  fuzzer.py  pyproject.toml
tools/skill-fuzzer/tests/: test_fuzzer.py
(+1514 files in other folders)
