[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillscan-security"
version = "0.8.0"
description = "Standalone AI skill security scanner — detects prompt injection, tool poisoning, and supply-chain attacks in MCP skills"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "SkillScan", email = "security@skillscan.sh"}]
requires-python = ">=3.11"
keywords = [
  "security", "mcp", "ai-safety", "prompt-injection", "static-analysis",
  "linter", "claude", "llm", "skill", "agent"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]

dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.1",
  "pyyaml>=6.0.1",
  "nltk>=3.9.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.4",
  "mypy>=1.10.0"
]
# Generative ML detector via llama.cpp (CPU, ~935 MB GGUF model)
ml = [
  "llama-cpp-python>=0.3.0",
]
# Legacy ONNX backend — deprecated, will be removed in a future release
ml-onnx = [
  "transformers>=4.40.0",
  "optimum[onnxruntime]>=1.19.0",
]
# YARA rule integration — run custom .yar/.yara rules against skill files
yara = [
  "yara-python>=4.5.0",
]
# Quality linter — delegates to skillscan-lint when installed
lint = [
  "skillscan-lint>=0.1.0",
]
# Behavioral trace — optional until skillscan-trace is published to PyPI
trace = [
  "skillscan-trace>=0.1.0",
]
# LLM-powered adversarial skill fuzzer (M19) — now a standalone package
fuzzer = [
  "skillscan-fuzzer>=0.1.0",
]
# ONNX export verification and INT8 quantization scripts (scripts/verify_onnx_export.py, scripts/quantize_onnx.py)
model-quality = [
  "transformers>=4.40.0",
  "torch>=2.2.0",
  "onnx>=1.16.0",
  "onnxruntime>=1.18.0",
  "scikit-learn>=1.4.0",
]

[project.scripts]
skillscan-security = "skillscan.cli:app"
skillscan = "skillscan.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skillscan"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = ["tests/adversarial/cases"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
