[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillscan-fuzzer"
version = "0.1.0"
description = "LLM-powered adversarial skill file fuzzer for skillscan-security"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
]

[project.scripts]
skill-fuzzer = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "fuzzer.py",
    "cli.py",
    "prompts/*.txt",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
